# pulpo

./: .buildinfo  .gitconfig  .gitignore  404.html  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_pypi.md  desktop.ini  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/content/: changelog.doctree  codeofconduct.doctree  contributing.doctree  installation.doctree  (+2 more)
_modules/: index.html
_sources/: index.md.txt
content/: changelog.html  codeofconduct.html  contributing.html  installation.html  license.html  theory.html
develop_tests/: ammonia.xlsx  ammonia_showcase.ipynb  ammonia_showcase_reduced.ipynb  sensitivity_analysis.ipynb  sensitivity_analysis_and_CC_formulation.ipynb  stats.py  stats_notebook.ipynb  stats_notebook_final.ipynb
docs/: conf.py  environment.yaml  index.md  index.rst  modules.rst  pulpo.rst  pulpo.utils.rst
notebooks/: 01_uncertainty_case copy.ipynb  01_uncertainty_case.ipynb  02_uncertainty_vs_MC.ipynb  Integer_cut_electricity_working.ipynb  Integer_cut_test.ipynb  X_plot.py  X_uncertainty_plots.py  X_uncertainty_showcase.ipynb  X_uncertainty_utils.py  a0_uncertainty_plots.py  a0_uncertainty_utils.py  a1_uncertainty_mc_plots.py  a1_uncertainty_mc_utils.py  electricity_showcase.ipynb  electricity_showcase_working.ipynb  energy_transition_showcase.ipynb  hydrogen_showcase.ipynb  one_earth_showcase.ipynb  plastic_showcase.ipynb  pulpo_showcase.ipynb  scaling_results.csv  uncertainty_case_study_reduced.ipynb  uncertainty_showcase.ipynb  uncertainty_showcase_consolidated.ipynb  uncertainty_showcase_fabian.ipynb  uncertainty_showcase_working.ipynb
pulpo/: pulpo.py  pulpo_unc.py
tests/: generic_database.py  rice_database.py  sample_database.py  test_functions.py
(+95 files in other folders)
