[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulpo-dev"
version = "1.3.0"
description = "Pulpo package for optimization in LCI databases"
authors = [
  { name="Fabian Lechtenberg", email="fabian.lechtenberg@chem.ethz.ch" }
]
maintainers = [
  { name="Fabian Lechtenberg", email="fabian.lechtenberg@chem.ethz.ch" }
]
readme = "README.md"
requires-python = ">=3.10,<=3.12"
license = { text = "BSD License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dependencies = [
    "fs==2.4.16",
    "pyomo<=6.5.0",
    "highspy==1.8.0",
    "ipython==8.14.0",
    "jupyterlab",
    "numpy<2.0.0",
    "pandas",
    "scipy<=1.14.1",
    "tqdm",
    "xlsxwriter"
]

[project.optional-dependencies]
bw2 = [
    "bw2calc<=1.8.2",
    "bw2data<=3.9.9"
]
bw25 = [
    "bw2calc>=2.0.0",
    "bw2data>=4.0.0"
]

[project.urls]
homepage = "https://github.com/flechtenberg/pulpo"
repository = "https://github.com/flechtenberg/pulpo"

[tool.setuptools.packages.find]
include = ["pulpo*", "utils*", "tests*"]

[tool.flake8]
max_line_length = 88
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs"
]
