[metadata]
name = pulpo
version = 0.0.1
author = Fabian Lechtenberg
author_email = fabian.lechtenberg@upc.edu
description = pulpo package for optimization in LCI databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flechtenberg/pulpo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True